--- a/PowerPoint/PowerPoint.csproj
+++ b/PowerPoint/PowerPoint.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DoubleBufferedPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="DrawingState.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +63,7 @@
     <Compile Include="IState.cs" />
     <Compile Include="Line.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="PointState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
