add multi-canvas feature

--- a/PowerPoint/PowerPoint.csproj
+++ b/PowerPoint/PowerPoint.csproj
@@ -150,5 +150,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Screenshot 2023-12-27 215209.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
